# substreams-sink-pubsub

./: Dockerfile  README.md  buf.gen.yaml  docker-compose.yml  go.mod  go.sum  sink.go  sink_test.go
.github/workflows/: docker.yml
cmd/substreams-sink-pubsub/: logging.go  main.go  sink.go
devel/: bootstrap-pubsub-emulator.sh  substreams-sink-pubsub
examples/ERC20_transfer/: Cargo.toml  substreams.yaml
examples/ERC20_transfer/src/: lib.rs
examples/ERC20_transfer/src/pb/: eth.token.transfers.v1.rs  mod.rs  sf.substreams.v1.rs
examples/ethERC20Transfers/: Cargo.toml  substreams.yaml
examples/pubsub_substream/: substreams.yaml
examples/pubsub_substream/src/: lib.rs
examples/pubsub_substream/src/pb/: mod.rs  pubsub.v1.rs  sf.substreams.sink.pubsub.v1.rs
examples/simple/: Cargo.toml  substreams.yaml
examples/simple/src/: lib.rs
examples/simple/src/pb/: mod.rs
pb/github.com/streamingfast/substreams-sink-pubsub/pb/substreams/sink/pubsub/v1/: pubsub.pb.go
pb/proto/substreams/sink/pubsub/v1/: pubsub.pb.go
pb/sf/substreams/sink/pubsub/v1/: pubsub.pb.go  service.pb.go
pb/substreams/sink/pubsub/v1/: pubsub.pb.go  service.pb.go
proto/: buf.gen.yaml
proto/sf/substreams/sink/pubsub/v1/: pubsub.proto  service.proto
proto/substreams/sink/pubsub/v1/: pubsub.proto  service.proto
pubsub/: pubsub.go
